--- a/app/src/main/res/layout/activity_concept_topic_list_items.xml
+++ b/app/src/main/res/layout/activity_concept_topic_list_items.xml
@@ -12,10 +12,12 @@
 
     <TextView
         android:id="@+id/conceptItem"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:textColor="#ffffff"
         android:layout_alignParentRight="true"
+        android:background="@drawable/list_item_border"
         android:text="Title"
         android:padding="3dp"
         android:textAppearance="?android:attr/textAppearanceLarge" />
